force-app/main/default/objects/pse__Practice_Actuals__c/fields/pse__Has_Difference_In_Verification__c.field-meta.xml
<CustomField>
    <fullName>pse__Has_Difference_In_Verification__c</fullName>
    <description>Formula to identify the differences between actuals and verification actuals.</description>
    <formula>AND(
		NOT(ISBLANK(pse__Verified_By__c)),
		OR(
			(ROUND(pse__Bookings__c, 2) != ROUND(pse__Verified_By__r.pse__Bookings__c, 2)),
			(ROUND(pse__Pre_Billed__c, 2) != ROUND(pse__Verified_By__r.pse__Pre_Billed__c, 2)),
			(ROUND(pse__Billings__c, 2) != ROUND(pse__Verified_By__r.pse__Billings__c, 2)),
			(ROUND(pse__Billings__c, 2) != ROUND(pse__Verified_By__r.pse__Billings__c, 2)),
			(ROUND(pse__Billable_External_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Billable_External_Hours__c, 2)),
			(ROUND(pse__Billable_Internal_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Billable_Internal_Hours__c, 2)),
			(ROUND(pse__Billed__c, 2) != ROUND(pse__Verified_By__r.pse__Billed__c, 2)),
			(ROUND(pse__Credited_Non_Billable_Internal_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Credited_Non_Billable_Internal_Hours__c, 2)),
			(ROUND(pse__Excluded_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Excluded_Hours__c, 2)),
			(ROUND(pse__Internal_Budget__c, 2) != ROUND(pse__Verified_By__r.pse__Internal_Budget__c, 2)),
			(ROUND(pse__Expense_Budget__c, 2) != ROUND(pse__Verified_By__r.pse__Expense_Budget__c, 2)),
			(ROUND(pse__Expense_Costs__c, 2) != ROUND(pse__Verified_By__r.pse__Expense_Costs__c, 2)),
			(ROUND(pse__External_Costs__c, 2) != ROUND(pse__Verified_By__r.pse__External_Costs__c, 2)),
			(ROUND(pse__Internal_Costs__c, 2) != ROUND(pse__Verified_By__r.pse__Internal_Costs__c, 2)),
			(ROUND(pse__Invoiced__c, 2) != ROUND(pse__Verified_By__r.pse__Invoiced__c, 2)),
			(ROUND(pse__Non_Billable_External_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Non_Billable_External_Hours__c, 2)),
			(ROUND(pse__Non_Billable_Internal_Hours__c, 2) != ROUND(pse__Verified_By__r.pse__Non_Billable_Internal_Hours__c, 2)), 
			(ROUND(pse__Other_Costs__c, 2) != ROUND(pse__Verified_By__r.pse__Other_Costs__c, 2)),
			(ROUND(pse__Pass_Through_Billings__c, 2) != ROUND(pse__Verified_By__r.pse__Pass_Through_Billings__c, 2)),
			(ROUND(pse__Revenue__c, 2) != ROUND(pse__Verified_By__r.pse__Revenue__c, 2)),
			(ROUND(pse__Total_Costs__c, 2) != ROUND(pse__Verified_By__r.pse__Total_Costs__c, 2)),
			pse__NRV_Has_Difference_In_Verification__c
		)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Difference in Verification</label>
    <type>Checkbox</type>
</CustomField>